refactor: 移除测试类中未使用的DTO转换器模拟
fix: 清理.gitignore中错误的.trae条目
docs: 添加项目规则文档.trae/rules/project_rules.md

重构测试类，移除所有未使用的DTO转换器模拟(Mock)以提高测试简洁性
清理.gitignore文件中错误的.trae条目
新增项目规则文档，包含模块化开发和代码生成指导原则